src/test/resources/de/cd4analysis/cocos/invalid/D0410.cd
package de.cd4analysis.cocos;

classdiagram D0410 {
  class C {
    AnUndefinedType attr;
  }
}